# DailyGodot4Cpp

./: .clang-format  .clang-tidy  .gitignore  README.md  build_cpp.sh  icon.svg.import  project.godot
cpp/: CMakeLists.txt  build_cpp.sh
cpp/src/: CMakeLists.txt  registration.cpp
cpp/src/objects/: quit_button.h  select_button.h
docs/: development_manual.md
resources/extension/: DailyGodot4Cpp.gdextension
resources/font/SourceCodePro/: SourceCodePro-Black.ttf.import  SourceCodePro-BlackIt.ttf.import  SourceCodePro-Bold.ttf.import  SourceCodePro-BoldIt.ttf.import  SourceCodePro-ExtraLight.ttf.import  SourceCodePro-ExtraLightIt.ttf.import  SourceCodePro-It.ttf.import  SourceCodePro-Light.ttf.import  SourceCodePro-LightIt.ttf.import  SourceCodePro-Medium.ttf.import  SourceCodePro-MediumIt.ttf.import  SourceCodePro-Regular.ttf.import  SourceCodePro-Semibold.ttf.import  SourceCodePro-SemiboldIt.ttf.import
resources/graph/: icon.png.import
resources/sound/: Fellows.mp3.import
resources/theme/: button.tres
scenes/: root.tscn
src/: CMakeLists.txt  GodotLibrary.cpp
